--- a/Projects/VidJot/package.json
+++ b/Projects/VidJot/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
