--- a/Projects/VidJot/package.json
+++ b/Projects/VidJot/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.1"
+    "express-handlebars": "^5.2.1",
+    "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
