--- a/Projects/VidJot/package.json
+++ b/Projects/VidJot/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "mongoose": "^5.12.2"
