--- a/Projects/VidJot/package.json
+++ b/Projects/VidJot/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
