--- a/Projects/VidJot/package.json
+++ b/Projects/VidJot/package.json
@@ -16,7 +16,9 @@
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
