--- a/Projects/VidJot/package.json
+++ b/Projects/VidJot/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "vidjot",
-  "version": "1.0.0",
-  "description": "App to create video ideas",
-  "main": "app.js",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.1",
-    "express-session": "^1.17.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.12.2",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+   "name": "vidjot",
+   "version": "1.0.0",
+   "description": "App to create video ideas",
+   "main": "app.js",
+   "scripts": {
+      "start": "node app.js",
+      "start-dev": "nodemon app.js"
+   },
+   "author": "",
+   "license": "MIT",
+   "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.19.0",
+      "connect-flash": "^0.1.1",
+      "express": "^4.17.1",
+      "express-handlebars": "^5.2.1",
+      "express-session": "^1.17.1",
+      "method-override": "^3.0.0",
+      "mongoose": "^5.12.2",
+      "passport": "^0.4.1",
+      "passport-local": "^1.0.0"
+   },
+   "devDependencies": {
+      "nodemon": "^2.0.7"
+   }
 }
