--- a/Projects/StoryBooks/package.json
+++ b/Projects/StoryBooks/package.json
@@ -11,7 +11,9 @@
    "license": "ISC",
    "dependencies": {
       "express": "^4.17.1",
-      "mongoose": "^5.12.4"
+      "mongoose": "^5.12.4",
+      "passport": "^0.4.1",
+      "passport-google-oauth20": "^2.0.0"
    },
    "devDependencies": {
       "nodemon": "^2.0.7"
