--- a/Projects/StoryBooks/package.json
+++ b/Projects/StoryBooks/package.json
@@ -11,6 +11,7 @@
    "license": "ISC",
    "dependencies": {
       "express": "^4.17.1",
+      "express-handlebars": "^5.3.0",
       "express-session": "^1.17.1",
       "mongoose": "^5.12.4",
       "passport": "^0.4.1",
