--- a/Projects/StoryBooks/package.json
+++ b/Projects/StoryBooks/package.json
@@ -10,9 +10,11 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@handlebars/allow-prototype-access": "^1.0.5",
       "express": "^4.17.1",
       "express-handlebars": "^5.3.0",
       "express-session": "^1.17.1",
+      "handlebars": "^4.7.7",
       "mongoose": "^5.12.4",
       "passport": "^0.4.1",
       "passport-google-oauth20": "^2.0.0"
