--- a/Projects/StoryBooks/package.json
+++ b/Projects/StoryBooks/package.json
@@ -16,6 +16,7 @@
       "express-handlebars": "^5.3.0",
       "express-session": "^1.17.1",
       "handlebars": "^4.7.7",
+      "moment": "^2.29.1",
       "mongoose": "^5.12.4",
       "passport": "^0.4.1",
       "passport-google-oauth20": "^2.0.0"
